tf_infra/k8s/production/gateway.yaml
kind: Service
apiVersion: v1
metadata:
  name: gateway
spec:
  type: NodePort
  ports:
    - name: gateway-port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: deployment-trend-find-gateway

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-trend-find-gateway
  template:
    metadata:
      labels:
        app: deployment-trend-find-gateway
    spec:
      containers:
        - image: gcr.io/aqueous-nebula-278307/trend-find-gateway:latest
          imagePullPolicy: Always
          name: gateway
          ports:
            - containerPort: 8080
              name: gateway-port
              protocol: TCP
          resources:
            requests:
              cpu: 20m
          readinessProbe:
            httpGet:
              port: 8080
              path: /health
              scheme: HTTP
            timeoutSeconds: 20
